--- a/app/src/main/res/layout/activity_recipe_choose_vegetable.xml
+++ b/app/src/main/res/layout/activity_recipe_choose_vegetable.xml
@@ -6,94 +6,108 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="80dp">
-
-    <!-- Back Button -->
-    <ImageView
-        android:id="@+id/back_button_recipe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:contentDescription="@string/back_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/recipe_back_btn" />
-
-    <!-- Title -->
-    <TextView
-        android:id="@+id/vegetable_title_head"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:fontFamily="@font/poppins_medium"
-        android:text="Vegetables"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/back_button_recipe"
-        app:layout_constraintStart_toEndOf="@+id/back_button_recipe"
-        app:layout_constraintTop_toTopOf="@+id/back_button_recipe" />
-
-    <!-- Instruction Text -->
-    <TextView
-        android:id="@+id/select_vegetables_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="Select Vegetables"
-        android:textColor="@color/black"
-        android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/back_button_recipe" />
-
-    <!-- Help Text -->
-    <TextView
-        android:id="@+id/vegetable_help_text"
+    android:background="@color/white"
+    >
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/topMenu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="74dp"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/back_button_recipe"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/recipe_back_btn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <ImageView
+            android:id="@+id/selected_vegetable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/select_vegetable"
+            android:layout_marginStart="12dp"
+            app:layout_constraintStart_toEndOf="@id/back_button_recipe"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <ImageButton
+            android:id="@+id/next_meat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:contentDescription="@string/vegetables"
+            android:src="@drawable/next_meat"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@id/next_fruit"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <ImageButton
+            android:id="@+id/next_fruit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:contentDescription="@string/meat_proteins"
+            android:src="@drawable/next_fruit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <TextView
+        android:id="@+id/fruit_help_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="30dp"
         android:fontFamily="@font/poppins_regular"
-        android:text="Tap on vegetables to select them for your recipe"
+        android:text="Greens and more! Choose your vegetables to add color, crunch, and nutrition to your meals."
         android:textColor="@color/black"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/select_vegetables_text" />
+        app:layout_constraintTop_toBottomOf="@+id/topMenu" />
 
-    <!-- RecyclerView -->
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/vegetables_recycler_view"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/confirm_vegetables_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/vegetable_help_text"
-        tools:listitem="@layout/item_vegetable" />
-
-    <!-- Confirm Button -->
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/confirm_vegetables_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="128dp"
-        android:background="@drawable/rounded_button_bg"
-        android:fontFamily="@font/poppins_medium"
-        android:text="Confirm Selection"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
+        android:layout_marginEnd="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fruit_help_text"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/item_vegetable" />
+
+    <ImageButton
+        android:id="@+id/confirm_vegetables_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:contentDescription="@string/meat_proteins"
+        android:src="@drawable/confirm_selection"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.823" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
