--- a/app/src/main/res/layout/item_fruit.xml
+++ b/app/src/main/res/layout/item_fruit.xml
@@ -6,7 +6,8 @@
     android:layout_height="120dp"
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
-    app:cardElevation="2dp">
+    app:cardElevation="2dp"
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
