--- a/app/src/main/res/layout/item_meat.xml
+++ b/app/src/main/res/layout/item_meat.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/meat_item_card"
+    android:background="@color/white"
     android:layout_width="100dp"
     android:layout_height="120dp"
     android:layout_margin="8dp"
