--- a/app/src/main/res/layout/item_recipe_card.xml
+++ b/app/src/main/res/layout/item_recipe_card.xml
@@ -1,37 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="200dp"
     android:layout_margin="8dp"
-    android:elevation="4dp"
-    app:cardCornerRadius="12dp">
+    card_view:cardCornerRadius="12dp"
+    card_view:cardElevation="2dp"
+    card_view:cardUseCompatPadding="true">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
+        <!-- Background recipe image -->
         <ImageView
             android:id="@+id/recipe_image"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:contentDescription="Recipe Image" />
 
+        <!-- Gradient overlay (taller to support long text) -->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_gravity="bottom"
+            android:background="@drawable/soft_gradient_overlay" />
+
+        <!-- Floating recipe name -->
         <TextView
             android:id="@+id/recipe_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="12dp"
             android:text="Recipe Name"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:padding="8dp"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:fontFamily="@font/poppins_medium"
             android:maxLines="2"
-            android:ellipsize="end" />
-    </LinearLayout>
+            android:ellipsize="end"
+            android:background="@android:color/transparent" />
+    </FrameLayout>
 
 </androidx.cardview.widget.CardView>
