--- a/app/src/main/res/layout/activity_glucose_history.xml
+++ b/app/src/main/res/layout/activity_glucose_history.xml
@@ -139,9 +139,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="No records found"
-        android:textSize="16sp"
+        android:textSize="30sp"
         android:textColor="#999999"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/poppins_bold"
         android:visibility="gone"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
